apps/gateway-and-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/demo-gateway
  http:
  - match:
    - uri:
        prefix: "/httpbin"
    route:
    - destination:
        host: httpbin.demo.svc.cluster.local
        port:
          number: 80
